--- a/src/main/resources/public/partials/request.html
+++ b/src/main/resources/public/partials/request.html
@@ -37,12 +37,12 @@
         </div>
             <div class="row">
                 <div class="col-sm-3">
-                    <div class="btn-group" uib-dropdown is-open="status.isopen" ng-show="isOccasional">
-                        <button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle
+                    <div class="btn-group col-sm-12" uib-dropdown is-open="status.isopen" ng-show="isOccasional" style="padding: 0">
+                        <button id="single-button" type="button" class="btn btn-primary col-sm-9" uib-dropdown-toggle
                                 ng-disabled="disabled">
                             {{ selectedItem }} <span class="caret"></span>
                         </button>
-                        <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+                        <ul class="dropdown-menu col-sm-9" uib-dropdown-menu role="menu" aria-labelledby="single-button">
                             <li class="dropdown-header" ng-disabled="true">{{ "form.2_days" | translate }}</li>
                             <li class="divider"></li>
                             <li class="dropdown_button" role="menuitem"><a ng-click="dropBoxItemSelected(reasons[0])">{{reasons[0]}}</a>
@@ -59,6 +59,8 @@
                             <li class="dropdown_button" role="menuitem"><a ng-click="dropBoxItemSelected(reasons[4])">{{reasons[4]}}</a>
                             </li>
                         </ul>
+                        <span uib-popover-html="info" popover-trigger="'mouseenter'" popover-placement="left"
+                              class="occasional-info glyphicon glyphicon-info-sign col-sm-2"></span>
                     </div>
                 </div>
             </div>
