--- a/src/main/resources/public/partials/userHistory.html
+++ b/src/main/resources/public/partials/userHistory.html
@@ -40,7 +40,7 @@
             </td>
             <td ng-if="!history.request">{{ history.deciderName }}</td>
             <td>
-                <span ng-if="!history.request || (history.request.type === 'NORMAL' && history.hours > 0)">
+                <span ng-if="!history.request || (history.request.type === 'NORMAL' && history.hours[0] !== '-')">
                     <span ng-if="history.fullTime" class="text-center text-success">
                         {{ history.days }}
                     </span>
@@ -56,7 +56,7 @@
                         {{ history.hours }}
                     </span>
                 </span>
-                <span ng-if="history.request.type === 'NORMAL' && history.hours < 0">
+                <span ng-if="history.request.type === 'NORMAL' && history.hours[0] === '-'">
                     <span ng-if="history.fullTime" class="text-center text-danger">
                         {{ history.days }}
                     </span>
