--- a/src/main/resources/public/partials/admin_requests.html
+++ b/src/main/resources/public/partials/admin_requests.html
@@ -13,77 +13,59 @@
     <br>
 
     <div id="requests">
-        <table st-table="adminRequests" st-safe-src="adminRequestsSafe" class="table table-striped">
+        <table st-table="displayed" st-pipe="callServer" class="table table-stripped">
             <thead>
             <tr>
-                <th st-sort="requester.name">{{'table.requester' | translate}} <span class="sort glyphicon"></span></th>
-                <th>{{'table.leader' | translate}} <span class="sort glyphicon"></span></th>
-                <th st-sort="term">{{'table.date' | translate}} <span class="sort glyphicon"></span></th>
-                <th>{{'table.status' | translate}}</th>
-            </tr>
-            <tr>
-                <th>
-                    <input st-search="requester.name" placeholder="{{'table.search.requester' | translate}}" class="input-sm form-control" type="search"/>
-                </th>
-                <th>
-                </th>
-                <th>
-                    <input st-search="term" placeholder="{{'table.search.term' | translate}}" class="input-sm form-control" type="search"/>
-                </th>
-                <th>
-                    <select st-search="status" class="custom-select">
-                        <option value="">{{'table.filter.all' | translate}}</option>
-                        <option value="PENDING">{{'table.in_progress' | translate}}</option>
-                        <option value="ACCEPTED">{{'table.accepted' | translate}}</option>
-                        <option value="REJECTED">{{'table.denied' | translate}}</option>
-                        <option value="CANCELLED">{{'table.cancelled' | translate}}</option>
-                    </select>
-                </th>
+                <th st-sort="requester.mail">{{'table.requester' | translate}} <span class="sort glyphicon"></span></th>
+                <th>{{'table.leader' | translate}}</th>
+                <th st-sort="startDate">{{'table.date' | translate}} <span class="sort glyphicon"></span></th>
+                <th st-sort="status">{{'table.status' | translate}} <span class="sort glyphicon"></span></th>
             </tr>
             </thead>
-            <tbody>
-                <tr ng-repeat="request in adminRequests">
+            <tbody ng-show="!isLoading">
+            <tr ng-repeat="request in displayed">
 
-                    <td ng-if="request.requester.name">{{request.requester.name}}</td>
-                    <td ng-if="!request.requester.name">{{'user.deleted' | translate}} ({{request.requester.mail}})</td>
+                <td ng-if="request.requester.name">{{request.requester.name}}</td>
+                <td ng-if="!request.requester.name">{{'user.deleted' | translate}} ({{request.requester.mail}})</td>
 
-                    <td>
-                        <span ng-repeat="acceptance in request.acceptances">
-                            <span ng-if="acceptance.decider.name">{{acceptance.decider.name}}</span>
-                            <span ng-if="!acceptance.decider.name">
-                                {{'user.deleted' | translate}}({{acceptance.decider.mail}}
-                            </span>
-                            <br>
+                <td>
+                    <span ng-repeat="acceptance in request.acceptances">
+                        <span ng-if="acceptance.decider.name">{{acceptance.decider.name}}</span>
+                        <span ng-if="!acceptance.decider.name">
+                            {{'user.deleted' | translate}}({{acceptance.decider.mail}}
                         </span>
-                    </td>
+                        <br>
+                    </span>
+                </td>
 
-                    <td>{{request.term}} ({{request.workDaysNumber}} {{'worker_view.work_days' | translate}})</td>
-                    <td>
-                        <div ng-if="request.accepted == null">
-                            {{'table.in_progress' | translate}} - {{request.statusNumber}}<br>
-                            <button class="btn btn-success" ng-click="accept(request.id)">
-                                {{'table.button.accept' | translate}}
-                            </button>
-                            <button class="btn btn-danger" ng-click="reject(request.id)">
-                                {{'table.button.deny' | translate}}
-                            </button>
-                        </div>
-                        <span ng-if="request.accepted == true">
+                <td>{{request.term}} ({{request.workDaysNumber}} {{'worker_view.work_days' | translate}})</td>
+                <td>
+                    <div ng-if="request.status === 'PENDING'">
+                        {{'table.in_progress' | translate}} - {{request.statusNumber}}<br>
+                        <button class="btn btn-success" ng-click="accept(request)">
+                            {{'table.button.accept' | translate}}
+                        </button>
+                        <button class="btn btn-danger" ng-click="reject(request)">
+                            {{'table.button.deny' | translate}}
+                        </button>
+                    </div>
+                    <span ng-if="request.status === 'ACCEPTED'">
                             {{'table.accepted' | translate}}
-                            <button class="btn btn-warning" ng-click="cancel(request.id)">
+                            <button class="btn btn-warning" ng-click="cancel(request)">
                                 {{'table.button.cancelRequest' | translate}}
                             </button>
                         </span>
-                        <span ng-if="request.accepted == false && request.cancelled == false">{{'table.denied' | translate}}</span>
-                        <span ng-if="request.accepted == false && request.cancelled == true">{{'table.cancelled' | translate}}</span>
-                    </td>
-                </tr>
+                    <span ng-if="request.status === 'REJECTED'">{{'table.denied' | translate}}</span>
+                    <span ng-if="request.status === 'CANCELLED'">{{'table.cancelled' | translate}}</span>
+                </td>
+            </tr>
+            </tbody>
+            <tbody ng-show="isLoading">
+                <td colspan="4" class="text-center">{{'table.loading' | translate}}</td>
             </tbody>
             <tfoot>
             <tr>
-                <td colspan="4" class="text-right">
-                    <div st-pagination="" st-items-by-page="10" st-displayed-pages="10"></div>
-                </td>
+                <td class="text-right" st-pagination="" st-items-by-page="10" colspan="4"></td>
             </tr>
             </tfoot>
         </table>
