--- a/src/main/resources/public/partials/admin_employees.html
+++ b/src/main/resources/public/partials/admin_employees.html
@@ -111,11 +111,11 @@
             <td>{{ user.mail }}</td>
             <td>
                 <span ng-repeat="team in user.teams">
-                    <span style="font-weight: 700;" ng-if="team.leader.teams.length">
+                    <span style="font-weight: 700;" ng-if="team.leader === user.mail">
                         <span ng-if="user.teams.length == 1 || $last">{{ team.name }}</span>
                         <span ng-if="user.teams.length > 1 && !$last">{{ team.name + ',' }}</span>
                     </span>
-                    <span ng-if="!team.leader.teams.length">
+                    <span ng-if="team.leader !== user.mail">
                         <span ng-if="user.teams.length == 1 || $last">{{ team.name }}</span>
                         <span ng-if="user.teams.length > 1 && !$last">{{ team.name + ',' }}</span>
                     </span>
@@ -123,7 +123,7 @@
             </td>
             <td>
                 <span ng-if="user.ec">{{ 'employees_view.EC_employee' | translate }}</span>
-                <span ng-if="!user.ec && !user.b2B" style="color: red"> {{ 'employees_view.contract_issue' | translate }}</span>
+                <span ng-if="!user.ec && !user.b2b" style="color: red"> {{ 'employees_view.contract_issue' | translate }}</span>
             </td>
         </tr>
 
