--- a/src/main/resources/public/partials/workerHistory.html
+++ b/src/main/resources/public/partials/workerHistory.html
@@ -31,37 +31,35 @@
         </tr>
         </thead>
         <tbody>
-        <tr ng-repeat-start="history in orderedHistory = (histories.list | orderBy: 'created': true)">
-            <td>{{ history.created}}</td>
-            <td ng-if="history.request">
-                <span ng-repeat="acceptance in history.acceptances">
-                    <span ng-if="history.acceptances.length == 1 || $last">{{ acceptance.decider.name }}</span>
-                    <span ng-if="history.acceptances.length > 1 && !$last">{{ acceptance.decider.name + "," }}</span>
+        <tr ng-repeat-start="history in reversedHistories = (histories | reverse)">
+            <td>{{ history.created }}</td>
+            <td>
+                <span ng-repeat="decider in history.deciders">
+                    <span ng-if="history.deciders.length == 1 || $last">{{ decider}}</span>
+                    <span ng-if="history.deciders.length > 1 && !$last">{{ decider + "," }}</span>
                 </span>
             </td>
-            <td ng-if="!history.request">{{ history.deciderName }}</td>
             <td>
-                <span ng-if="!history.request || (history.request.type === 'NORMAL' && history.hours[0] !== '-')">
-                    <span class="text-center text-success">{{ history.days }}</span>
+                <span ng-if="history.hours >= 0" class="text-center text-success">
+                    {{ Math.floor(history.hours / history.workTime) }}d {{ history.hours - (Math.floor(history.hours / history.workTime) * history.workTime) }}h
                 </span>
-                <span ng-if="history.request.type === 'OCCASIONAL'">
-                    <span class="text-center text-warning">{{ history.days }}</span>
-                </span>
-                <span ng-if="history.request.type === 'NORMAL' && history.hours[0] === '-'">
-                    <span class="text-center text-danger">{{ history.days }} </span>
+                <span ng-if="history.hours < 0" class="text-center text-danger">
+                    {{ Math.floor(history.hours / history.workTime) }}d {{ history.hours - (Math.floor(history.hours / history.workTime) * history.workTime) }}h
                 </span>
             </td>
             <td class="text-center">
-                {{ history.daysLeft}}
+                <span ng-if="history.workTime === 8" class="text-center">
+                    {{ Math.floor(history.hoursRemaining / history.workTime) }}d {{ history.hoursRemaining - (Math.floor(history.hoursRemaining / history.workTime) * history.workTime) }}h
+                </span>
             </td>
-            <td>{{ history.comment }}</td>
+            <td>{{ history.comment }} </td>
         </tr>
-        <tr ng-repeat-end ng-if="ec == 'true' && history.workTime !== orderedHistory[$index + 1].workTime">
+        <tr ng-repeat-end ng-if="history.workTime !== reversedHistories[$index + 1].workTime">
             <td colspan="5">
-                <span ng-if="orderedHistory[$index + 1] != null">
+                <span ng-if="reversedHistories[$index + 1] != null">
                     {{'employees_view.workTime_changed' | translate}} :
                 </span>
-                <span ng-if="orderedHistory[$index + 1] == null">
+                <span ng-if="reversedHistories[$index + 1] == null">
                     {{'employees_view.workTime' | translate}} :
                 </span>
                 <span ng-if="history.workTime !== 8"
