--- a/src/main/resources/public/partials/header.html
+++ b/src/main/resources/public/partials/header.html
@@ -15,7 +15,7 @@
                     <li class="dropdown-header">
                         <b>{{ 'navbar.teams' | translate}}:</b><br>
                         <div ng-repeat="team in session.teams">
-                            <span>{{team.name}} ({{team.leader.name}} {{team.leader.surname}})</span><br>
+                            <span>{{team.name}} ({{team.leader}})</span><br>
                         </div>
                     </li>
                     <li class="divider"></li>
